# longInteger

./: CMakeLists.txt  main.cpp
BigInt/Include/: bigInt.h
BigInt/src/: bigInt.cpp
logger/: CMakeLists.txt
logger/consoleLog/: consoleLogger.cpp  consoleLogger.h
logger/fileLog/: fileLogger.cpp  fileLogger.h
logger/globLog/: globLogger.cpp  globLogger.h
logger/interfaceForLogs/: Ilogger.cpp  Ilogger.h
logger/logFactory/: logger.cpp  logger.h
tests/: tests.cpp
